refactoring, classi statiche, system, services e un fottio di errori

--- a/ShushaoEngine/ShushaoEngine.cbp
+++ b/ShushaoEngine/ShushaoEngine.cbp
@@ -5,7 +5,7 @@
 		<Option title="ShushaoEngine" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="components\;gameobjects\;objects\;GL\;shaders\;" />
+		<Option virtualFolders="components\;gameobjects\;objects\;GL\;shaders\;globals\;" />
 		<Build>
 			<Target title="Release">
 				<Option output="lib/ShushaoEngine" prefix_auto="1" extension_auto="1" />
@@ -23,6 +23,19 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="Debug">
+				<Option output="lib/ShushaoEngine" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="obj/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
+					<Add option="-g" />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-std=c++11" />
@@ -32,7 +45,6 @@
 			<Add directory="D:/lib/mingw-dev-libs/glew/include" />
 		</Compiler>
 		<Linker>
-			<Add option="-static-libgcc" />
 			<Add library="glew32" />
 			<Add library="mingw32" />
 			<Add library="opengl32" />
@@ -43,8 +55,6 @@
 			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/glew/lib" />
 		</Linker>
-		<Unit filename="asset.cpp" />
-		<Unit filename="asset.h" />
 		<Unit filename="camera.cpp">
 			<Option virtualFolder="components/" />
 		</Unit>
@@ -59,8 +69,12 @@
 		</Unit>
 		<Unit filename="component.cpp" />
 		<Unit filename="component.h" />
-		<Unit filename="config.cpp" />
-		<Unit filename="config.h" />
+		<Unit filename="config.cpp">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="config.h">
+			<Option virtualFolder="globals/" />
+		</Unit>
 		<Unit filename="cycle.cpp" />
 		<Unit filename="cycle.h" />
 		<Unit filename="gamedata.cpp" />
@@ -71,20 +85,20 @@
 		<Unit filename="gameobject.h">
 			<Option virtualFolder="objects/" />
 		</Unit>
-		<Unit filename="glgame.cpp">
-			<Option virtualFolder="GL/" />
-		</Unit>
-		<Unit filename="glgame.h">
-			<Option virtualFolder="GL/" />
-		</Unit>
 		<Unit filename="glmanager.cpp">
 			<Option virtualFolder="GL/" />
 		</Unit>
 		<Unit filename="glmanager.h">
 			<Option virtualFolder="GL/" />
 		</Unit>
-		<Unit filename="libs.h" />
-		<Unit filename="macros.h" />
+		<Unit filename="inputmanager.cpp" />
+		<Unit filename="inputmanager.h" />
+		<Unit filename="libs.h">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="macros.h">
+			<Option virtualFolder="globals/" />
+		</Unit>
 		<Unit filename="maincamera.cpp">
 			<Option virtualFolder="gameobjects/" />
 		</Unit>
@@ -123,6 +137,8 @@
 		<Unit filename="scene.h" />
 		<Unit filename="scenemanager.cpp" />
 		<Unit filename="scenemanager.h" />
+		<Unit filename="service.cpp" />
+		<Unit filename="service.h" />
 		<Unit filename="setime.cpp" />
 		<Unit filename="setime.h" />
 		<Unit filename="shader.cpp">
@@ -149,6 +165,8 @@
 		<Unit filename="standard.vert">
 			<Option virtualFolder="shaders/" />
 		</Unit>
+		<Unit filename="system.cpp" />
+		<Unit filename="system.h" />
 		<Unit filename="texture.cpp">
 			<Option virtualFolder="objects/" />
 		</Unit>
@@ -160,6 +178,12 @@
 		</Unit>
 		<Unit filename="transform.h">
 			<Option virtualFolder="components/" />
+		</Unit>
+		<Unit filename="utility.cpp">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="utility.h">
+			<Option virtualFolder="globals/" />
 		</Unit>
 		<Extensions>
 			<code_completion />
