--- a/ShushaoGame/ShushaoGame.cbp
+++ b/ShushaoGame/ShushaoGame.cbp
@@ -12,6 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Wall" />
 					<Add option="-std=c++11" />
 					<Add option="-g" />
 				</Compiler>
