--- a/ShushaoEngine/ShushaoEngine.cbp
+++ b/ShushaoEngine/ShushaoEngine.cbp
@@ -5,7 +5,7 @@
 		<Option title="ShushaoEngine" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="components\;gameobjects\;objects\;GL\;shaders\;globals\;" />
+		<Option virtualFolders="components\;gameobjects\;objects\;shaders\;globals\;" />
 		<Build>
 			<Target title="Release">
 				<Option output="lib/ShushaoEngine" prefix_auto="1" extension_auto="1" />
@@ -45,12 +45,6 @@
 			<Add directory="D:/lib/mingw-dev-libs/glew/include" />
 		</Compiler>
 		<Linker>
-			<Add library="glew32" />
-			<Add library="mingw32" />
-			<Add library="opengl32" />
-			<Add library="SDL2main" />
-			<Add library="SDL2" />
-			<Add library="SDL2_image" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/glew/lib" />
@@ -77,20 +71,22 @@
 		</Unit>
 		<Unit filename="cycle.cpp" />
 		<Unit filename="cycle.h" />
+		<Unit filename="debug.cpp">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="debug.h">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="entity.cpp">
+			<Option virtualFolder="objects/" />
+		</Unit>
+		<Unit filename="entity.h">
+			<Option virtualFolder="objects/" />
+		</Unit>
 		<Unit filename="gamedata.cpp" />
 		<Unit filename="gamedata.h" />
-		<Unit filename="gameobject.cpp">
-			<Option virtualFolder="objects/" />
-		</Unit>
-		<Unit filename="gameobject.h">
-			<Option virtualFolder="objects/" />
-		</Unit>
-		<Unit filename="glmanager.cpp">
-			<Option virtualFolder="GL/" />
-		</Unit>
-		<Unit filename="glmanager.h">
-			<Option virtualFolder="GL/" />
-		</Unit>
+		<Unit filename="glmanager.cpp" />
+		<Unit filename="glmanager.h" />
 		<Unit filename="inputmanager.cpp" />
 		<Unit filename="inputmanager.h" />
 		<Unit filename="libs.h">
@@ -110,12 +106,6 @@
 		</Unit>
 		<Unit filename="material.h">
 			<Option virtualFolder="objects/" />
-		</Unit>
-		<Unit filename="model.cpp">
-			<Option virtualFolder="GL/" />
-		</Unit>
-		<Unit filename="model.h">
-			<Option virtualFolder="GL/" />
 		</Unit>
 		<Unit filename="object.cpp" />
 		<Unit filename="object.h" />
