--- a/ShushaoEngine/ShushaoEngine.cbp
+++ b/ShushaoEngine/ShushaoEngine.cbp
@@ -77,6 +77,12 @@
 		<Unit filename="debug.h">
 			<Option virtualFolder="globals/" />
 		</Unit>
+		<Unit filename="debuggrid.cpp">
+			<Option virtualFolder="gameobjects/" />
+		</Unit>
+		<Unit filename="debuggrid.h">
+			<Option virtualFolder="gameobjects/" />
+		</Unit>
 		<Unit filename="entity.cpp">
 			<Option virtualFolder="objects/" />
 		</Unit>
@@ -91,6 +97,12 @@
 		<Unit filename="inputmanager.h" />
 		<Unit filename="libs.h">
 			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="linerenderer.cpp">
+			<Option virtualFolder="components/" />
+		</Unit>
+		<Unit filename="linerenderer.h">
+			<Option virtualFolder="components/" />
 		</Unit>
 		<Unit filename="macros.h">
 			<Option virtualFolder="globals/" />
