gestione base effetti sonori, aggiunta box2d lib

--- a/ShushaoEngine/ShushaoEngine.cbp
+++ b/ShushaoEngine/ShushaoEngine.cbp
@@ -41,15 +41,13 @@
 			<Add option="-std=c++11" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2/include/SDL2" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/include/SDL2" />
+			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/include/SDL2" />
 			<Add directory="D:/lib/mingw-dev-libs/glm" />
 			<Add directory="D:/lib/mingw-dev-libs/glew/include" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/include/SDL2" />
+			<Add directory="D:/lib/mingw-dev-libs/Box2D/" />
 		</Compiler>
 		<Linker>
-			<Add directory="D:/lib/mingw-dev-libs/SDL2/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/glew/lib" />
+			<Add option="static" />
 		</Linker>
 		<Unit filename="animation.cpp">
 			<Option virtualFolder="components/" />
@@ -57,6 +55,8 @@
 		<Unit filename="animation.h">
 			<Option virtualFolder="components/" />
 		</Unit>
+		<Unit filename="audio.cpp" />
+		<Unit filename="audio.h" />
 		<Unit filename="camera.cpp">
 			<Option virtualFolder="components/" />
 		</Unit>
