--- a/ShushaoEngine/ShushaoEngine.cbp
+++ b/ShushaoEngine/ShushaoEngine.cbp
@@ -5,7 +5,7 @@
 		<Option title="ShushaoEngine" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="components\;objects\;shaders\;globals\;singletons\;entities\;" />
+		<Option virtualFolders="components\;components\physics\;shaders\;objects\;entities\;singletons\;globals\;" />
 		<Build>
 			<Target title="Release">
 				<Option output="lib/ShushaoEngine" prefix_auto="1" extension_auto="1" />
@@ -55,13 +55,26 @@
 		<Unit filename="animation.h">
 			<Option virtualFolder="components/" />
 		</Unit>
-		<Unit filename="audio.cpp" />
-		<Unit filename="audio.h" />
+		<Unit filename="audio.cpp">
+			<Option virtualFolder="objects/" />
+		</Unit>
+		<Unit filename="audio.h">
+			<Option virtualFolder="objects/" />
+		</Unit>
 		<Unit filename="camera.cpp">
 			<Option virtualFolder="components/" />
 		</Unit>
 		<Unit filename="camera.h">
 			<Option virtualFolder="components/" />
+		</Unit>
+		<Unit filename="collider2d.cpp">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="collider2d.h">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="collision2d.h">
+			<Option virtualFolder="components/physics/" />
 		</Unit>
 		<Unit filename="color.cpp">
 			<Option virtualFolder="objects/" />
@@ -79,6 +92,9 @@
 			<Option virtualFolder="globals/" />
 		</Unit>
 		<Unit filename="config.h">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="constants.h">
 			<Option virtualFolder="globals/" />
 		</Unit>
 		<Unit filename="cycle.cpp">
@@ -138,9 +154,6 @@
 		<Unit filename="logger.h">
 			<Option virtualFolder="globals/" />
 		</Unit>
-		<Unit filename="macros.h">
-			<Option virtualFolder="globals/" />
-		</Unit>
 		<Unit filename="maincamera.cpp">
 			<Option virtualFolder="entities/" />
 		</Unit>
@@ -158,6 +171,24 @@
 		</Unit>
 		<Unit filename="object.h">
 			<Option virtualFolder="objects/" />
+		</Unit>
+		<Unit filename="physics.cpp">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="physics.h">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="physicscontactlistener.cpp">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="physicscontactlistener.h">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="physicsdebugdraw.cpp">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="physicsdebugdraw.h">
+			<Option virtualFolder="components/physics/" />
 		</Unit>
 		<Unit filename="program.cpp">
 			<Option virtualFolder="objects/" />
@@ -182,6 +213,12 @@
 		</Unit>
 		<Unit filename="resources.h">
 			<Option virtualFolder="singletons/" />
+		</Unit>
+		<Unit filename="rigidbody2d.cpp">
+			<Option virtualFolder="components/physics/" />
+		</Unit>
+		<Unit filename="rigidbody2d.h">
+			<Option virtualFolder="components/physics/" />
 		</Unit>
 		<Unit filename="scene.cpp">
 			<Option virtualFolder="objects/" />
@@ -274,6 +311,12 @@
 			<Option virtualFolder="globals/" />
 		</Unit>
 		<Unit filename="utility.h">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="vectormap.cpp">
+			<Option virtualFolder="globals/" />
+		</Unit>
+		<Unit filename="vectormap.h">
 			<Option virtualFolder="globals/" />
 		</Unit>
 		<Extensions>
