--- a/ShushaoGame/ShushaoGame.cbp
+++ b/ShushaoGame/ShushaoGame.cbp
@@ -46,12 +46,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-std=c++11" />
+			<Add option="-g" />
 			<Add option="-fexceptions" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2/include/SDL2" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/include/SDL2" />
+			<Add directory="../ShushaoEngine" />
 			<Add directory="D:/lib/mingw-dev-libs/glew/include" />
 			<Add directory="D:/lib/mingw-dev-libs/glm" />
-			<Add directory="../ShushaoEngine" />
+			<Add directory="D:/lib/mingw-dev-libs/SDL2/include/SDL2" />
+			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/include/SDL2" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/include/SDL2" />
 			<Add directory="D:/lib/mingw-dev-libs/Box2D" />
 		</Compiler>
@@ -67,12 +68,12 @@
 			<Add library="SDL2_image" />
 			<Add library="SDL2_mixer" />
 			<Add library="Box2D" />
+			<Add directory="../ShushaoEngine/lib" />
+			<Add directory="D:/lib/mingw-dev-libs/glew/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/glew/lib" />
 			<Add directory="D:/lib/mingw-dev-libs/Box2D/Build/Box2D" />
-			<Add directory="../ShushaoEngine/lib" />
 		</Linker>
 		<Unit filename="assets/pancrazio.png" />
 		<Unit filename="assets/tattolino.jpg" />
@@ -86,6 +87,8 @@
 		<Unit filename="mover.h" />
 		<Unit filename="pancrazio.cpp" />
 		<Unit filename="pancrazio.h" />
+		<Unit filename="shaders/box2d.frag" />
+		<Unit filename="shaders/box2d.vert" />
 		<Unit filename="shaders/standard.frag" />
 		<Unit filename="shaders/standard.vert" />
 		<Unit filename="shaders/wire.frag" />
