--- a/ShushaoEngine.cbp
+++ b/ShushaoEngine.cbp
@@ -5,7 +5,7 @@
 		<Option title="ShushaoEngine" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="game\;engine\;engine\shaders\;engine\components\;engine\objects\;engine\physics\;engine\globals\;engine\entities\;engine\singletons\;" />
+		<Option virtualFolders="game\;engine\;engine\shaders\;engine\components\;engine\objects\;engine\physics\;engine\globals\;engine\entities\;engine\singletons\;engine\class\;" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/ShushaoGame" prefix_auto="1" extension_auto="1" />
@@ -45,12 +45,12 @@
 			<Add option="-std=c++11" />
 			<Add option="-g" />
 			<Add option="-fexceptions" />
-			<Add directory="D:/lib/mingw-dev-libs/glew/include" />
-			<Add directory="D:/lib/mingw-dev-libs/glm" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2/include/SDL2" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/include/SDL2" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/include/SDL2" />
-			<Add directory="D:/lib/mingw-dev-libs/Box2D" />
+			<Add directory="../../mingw-dev-libs/glew/include" />
+			<Add directory="../../mingw-dev-libs/glm" />
+			<Add directory="../../mingw-dev-libs/SDL2/include/SDL2" />
+			<Add directory="../../mingw-dev-libs/SDL2_image/include/SDL2" />
+			<Add directory="../../mingw-dev-libs/SDL2_mixer/include/SDL2" />
+			<Add directory="../../mingw-dev-libs/Box2D" />
 		</Compiler>
 		<Linker>
 			<Add library="glew32" />
@@ -63,11 +63,11 @@
 			<Add library="SDL2_image" />
 			<Add library="SDL2_mixer" />
 			<Add library="Box2D" />
-			<Add directory="D:/lib/mingw-dev-libs/glew/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_image/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/SDL2_mixer/lib" />
-			<Add directory="D:/lib/mingw-dev-libs/Box2D/Build/Box2D" />
+			<Add directory="../../mingw-dev-libs/glew/lib" />
+			<Add directory="../../mingw-dev-libs/SDL2/lib" />
+			<Add directory="../../mingw-dev-libs/SDL2_image/lib" />
+			<Add directory="../../mingw-dev-libs/SDL2_mixer/lib" />
+			<Add directory="../../mingw-dev-libs/Box2D/Build/Box2D" />
 		</Linker>
 		<Unit filename="engine/animation.cpp">
 			<Option virtualFolder="engine/components/" />
@@ -103,10 +103,10 @@
 			<Option virtualFolder="engine/physics/" />
 		</Unit>
 		<Unit filename="engine/color.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/color.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/component.cpp">
 			<Option virtualFolder="engine/objects/" />
@@ -124,16 +124,16 @@
 			<Option virtualFolder="engine/globals/" />
 		</Unit>
 		<Unit filename="engine/cycle.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/cycle.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/debug.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/debug.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/debuggrid.cpp">
 			<Option virtualFolder="engine/entities/" />
@@ -142,10 +142,10 @@
 			<Option virtualFolder="engine/entities/" />
 		</Unit>
 		<Unit filename="engine/design.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/design.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/entity.cpp">
 			<Option virtualFolder="engine/objects/" />
@@ -169,10 +169,10 @@
 			<Option virtualFolder="engine/singletons/" />
 		</Unit>
 		<Unit filename="engine/input.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/input.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/linerenderer.cpp">
 			<Option virtualFolder="engine/components/" />
@@ -181,10 +181,10 @@
 			<Option virtualFolder="engine/components/" />
 		</Unit>
 		<Unit filename="engine/logger.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/logger.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/maincamera.cpp">
 			<Option virtualFolder="engine/entities/" />
@@ -199,10 +199,10 @@
 			<Option virtualFolder="engine/objects/" />
 		</Unit>
 		<Unit filename="engine/object.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/object.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/physics.cpp">
 			<Option virtualFolder="engine/physics/" />
@@ -235,10 +235,10 @@
 			<Option virtualFolder="engine/components/" />
 		</Unit>
 		<Unit filename="engine/rect.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/rect.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/renderer.cpp">
 			<Option virtualFolder="engine/components/" />
@@ -259,10 +259,10 @@
 			<Option virtualFolder="engine/physics/" />
 		</Unit>
 		<Unit filename="engine/scene.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/scene.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/scenemanager.cpp">
 			<Option virtualFolder="engine/singletons/" />
@@ -316,10 +316,10 @@
 			<Option virtualFolder="engine/shaders/" />
 		</Unit>
 		<Unit filename="engine/system.cpp">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/system.h">
-			<Option virtualFolder="engine/globals/" />
+			<Option virtualFolder="engine/class/" />
 		</Unit>
 		<Unit filename="engine/texture.cpp">
 			<Option virtualFolder="engine/objects/" />
@@ -349,12 +349,6 @@
 			<Option virtualFolder="engine/globals/" />
 		</Unit>
 		<Unit filename="engine/utility.h">
-			<Option virtualFolder="engine/globals/" />
-		</Unit>
-		<Unit filename="engine/vectormap.cpp">
-			<Option virtualFolder="engine/globals/" />
-		</Unit>
-		<Unit filename="engine/vectormap.h">
 			<Option virtualFolder="engine/globals/" />
 		</Unit>
 		<Unit filename="engine/wire.frag">
