--- a/ShushaoEngine.cbp
+++ b/ShushaoEngine.cbp
@@ -36,6 +36,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-static-libgcc" />
 				</Linker>
 				<ExtraCommands>
 					<Add before="cmd /c rescopy Release" />
@@ -47,13 +48,13 @@
 			<Add option="-std=c++11" />
 			<Add option="-g" />
 			<Add option="-fexceptions" />
-			<Add option="-DDEBUG=false" />
 			<Add directory="../../mingw-dev-libs/glew/include" />
 			<Add directory="../../mingw-dev-libs/glm" />
 			<Add directory="../../mingw-dev-libs/SDL2/include/SDL2" />
 			<Add directory="../../mingw-dev-libs/SDL2_image/include/SDL2" />
+			<Add directory="../../mingw-dev-libs/SDL2_ttf/include/SDL2" />
 			<Add directory="../../mingw-dev-libs/SDL2_mixer/include/SDL2" />
-			<Add directory="../../mingw-dev-libs/Box2D" />
+			<Add directory="../../mingw-dev-libs/Box2D/include" />
 		</Compiler>
 		<Linker>
 			<Add library="glew32" />
@@ -64,13 +65,15 @@
 			<Add library="SDL2main" />
 			<Add library="SDL2" />
 			<Add library="SDL2_image" />
+			<Add library="SDL2_ttf" />
 			<Add library="SDL2_mixer" />
 			<Add library="Box2D" />
 			<Add directory="../../mingw-dev-libs/glew/lib" />
 			<Add directory="../../mingw-dev-libs/SDL2/lib" />
 			<Add directory="../../mingw-dev-libs/SDL2_image/lib" />
+			<Add directory="../../mingw-dev-libs/SDL2_ttf/lib" />
 			<Add directory="../../mingw-dev-libs/SDL2_mixer/lib" />
-			<Add directory="../../mingw-dev-libs/Box2D/Build/Box2D" />
+			<Add directory="../../mingw-dev-libs/Box2D/lib" />
 		</Linker>
 		<Unit filename="engine/animation.cpp">
 			<Option virtualFolder="engine/components/" />
@@ -323,6 +326,12 @@
 		</Unit>
 		<Unit filename="engine/system.h">
 			<Option virtualFolder="engine/class/" />
+		</Unit>
+		<Unit filename="engine/textrenderer.cpp">
+			<Option virtualFolder="engine/components/" />
+		</Unit>
+		<Unit filename="engine/textrenderer.h">
+			<Option virtualFolder="engine/components/" />
 		</Unit>
 		<Unit filename="engine/texture.cpp">
 			<Option virtualFolder="engine/objects/" />
